--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,6 +2,9 @@
     "Idioma": "Titulo",
     "TextIdioma": "Español",
     "Sitetitle": "Abeja",
+    "Honey":"Miel",
+    "Honeys":"Mieles",
+    "HoneyList":"Lista de Mieles",
     "Name": "Name",
     "NameError": "I am sure you must have a name!",
     "Email": "Email address",
@@ -39,16 +42,16 @@
     },
     "Benifices": {
         "BenificesTitle": "Beneficios de la miel",
-        "Title1": "تعرف على أبرز أنواع العسل وفوائده",
-        "DescriptionHoney": "العسل هو طعام طبيعي حلو ولزج يُنتجه النحل. ينتج النحل العسل من إفرازات النباتات السكرية (رحيق الزهور) من خلال العمليات المنظمة والنشاط الأنزيمي الخاص، وبعد تبخر الماء يأخذ شكله النهائي. يتم تخزين العسل في هياكل شمعية تسمى أقراص العسل. ينتج النحل مجموعة متنوعة من العسل تختلف في اللون والذوق والانتفاخ (اعتمادًا على مصدر الغذاء للنحل).",
-        "TitleType": "أشهر وأفضل 7 أنواع العسل في المغرب",
-        "PType": "هناك العديد من أنواع العسل في المغرب بسبب تنوع الغطاء النباتي من منطقة إلى أخرى. في هذا الموضوع، سنلقي نظرة على أفضل أنواع العسل من المغرب. يتم بيع ما بين 10 و 18 نكهة من العسل، أشهرها عسل داغموس، عسل الأوكالبتوس، عسل الخروب، عسل السدر، عسل البرتقال، عسل الزعتر ، … أفضل أنواع العسل في "
+        "Title1":"Conoce los principales tipos de miel y sus beneficios",
+        "DescriptionHoney": "La miel es un alimento natural dulce y pegajoso producido por las abejas. Las abejas producen miel a partir de las secreciones azucaradas de las plantas (néctar de las flores) mediante procesos regulados y una actividad enzimática especial, y tras la evaporación del agua adquiere su forma final. La miel se almacena en estructuras cerosas llamadas panales. Las abejas producen una variedad de miel que varía en color, sabor y bulto (dependiendo de la fuente de alimento de la abeja)",
+        "TitleType":"Las 7 mieles más famosas y mejores de Marruecos",
+        "PType": "Hay muchos tipos de miel en Marruecos debido a la diversidad de la vegetación de una región a otra. En este post, echaremos un vistazo a las mejores mieles de Marruecos. Se venden entre 10 y 18 sabores de miel, siendo las más populares la miel de Dagmus, la miel de Eucalipto, la miel de Algarrobo, la miel de Sidr, la miel de Naranja, la miel de Zaatar, ... Las mejores mieles de Marruecos "
     },
     "BenificesHerbalHoney": {
-        "Title": "عسل الأعشاب",
-        "PHerbalHoney": "هناك أنواع مختلفة من العسل، والتي تختلف حسب الزهرة التي جمع من عليها النحل اللقاح، فهناك عسل الأزهار وعسل زهرة البرسيم وعسل الموالح، وهنا نتكلم عن عسل الأعشاب. وعسل الأعشاب من أنقى أنواع العسل وذلك لما يحتوي عليه من مواد غنية بالفيتامينات والمعادن، وأيضًا مضادات الأكسدة، وهي الحصن الأول لجسم الإنسان ضد الكثير من الأمراض وأهمها السرطان. وعسل الأعشاب مثل باقي أنواع العسل يحتوي على نسبة عالية من السكر والبروتين والحديد والكالسيوم كذلك، وهناك العديد من أنواع عسل الأعشاب، منها عسل القرنفل والأعشاب البرية والورد البري، وهناك اختلافات طفيفة في المذاق بين كل نوع وآخر. وعسل الأعشاب غني للغاية ",
-        "TitleBenifit": "فوائد عسل الأعشاب",
-        "DescriptionBenifit": "عسل الأعشاب يحتوي على فوائد عديدة لصحة الإنسان وجسمه ربما أكثر من باقي أنواع العسل الأخرى",
+        "Title": "Miel de hierbas",
+        "PHerbalHoney":"Hay diferentes tipos de miel, que se diferencian según la flor de la que las abejas recogieron el polen, hay miel de flores, miel de trébol, miel de cítricos, y aquí estamos hablando de la miel de hierbas. La miel de hierbas es uno de los tipos de miel más puros por su rico contenido en vitaminas y minerales, así como en antioxidantes, que son la primera fortaleza del cuerpo humano contra muchas enfermedades, la más importante de las cuales es el cáncer. La miel de hierbas, como otros tipos de miel, contiene también un alto porcentaje de azúcar, proteínas, hierro y calcio, y hay muchos tipos de miel de hierbas, como la miel de clavo, de hierbas silvestres y de rosa silvestre, y hay ligeras diferencias de sabor entre un tipo y otro. La miel de hierbas es riquísima", 
+        "TitleBenifit": " Beneficios de la miel de hierbas ",
+        "DescripciónBenifit": "La miel de hierbas tiene muchos beneficios para la salud y el cuerpo humano, quizás más que otros tipos de miel.",
         "Benifit1": "La miel de hierbas es rica en un gran porcentaje de antibióticos naturales, que protegen al organismo de diversas enfermedades.",
         "Benifit2": "Ayuda a aliviar el dolor de muelas y las infecciones de las encías.",
         "Benifit3": "La miel a base de plantas es rica en un gran porcentaje de antibióticos naturales que protegen al organismo de diversas enfermedades.",
@@ -62,5 +65,16 @@
     "Policies": {
         "PoliciesTitle": "Política de devoluciones",
         "Title": ""
+    },
+
+    "Cours": {
+        "Title": "Coursos",
+        "TitleCours1":"Curso Miel, Polen, Propóleos, Jalea Y Cera",
+        "TitleCours": "Cursos de Apicultura impartidos por referentes del sector",
+        "TitleTeam": "Aprende de la mano de referentes del sector",
+        "DescriptionCours":"Esta es nuestra selección de cursos de apicultura, impartidos por los mejores profesionales en apicultura como FolanitoXXXXX o menganitoXXXXX entre otros. Ofrecemos una gama de formación para personas que pretenden iniciarse como apicultores así como cursos de especialización para apicultores profesionales.Es un proyecto formativo de nuestra XXXXXXXX."
+    },
+    "Material": {
+        "Title": "Materiales de tu interes"
     }
 }
