--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,12 +7,12 @@
     "HoneyList":"Lista de Mieles",
     "Name": "Name",
     "NameError": "I am sure you must have a name!",
-    "Email": "Email address",
-    "PhoneNo": "Phone No",
-    "Password": "Password",
+    "Email": "Email",
+    "PhoneNo": "Teléfono",
+    "Password": "Contraseña",
     "Bio": "Enter bio",
     "TermsConditions": "I agree to terms and conditions.",
-    "Submit": "Submit",
+    "Submit": "Enviar",
     "LigneTxt": "Haga su pedido en línea o por teléfono",
     "Follow_Us": "Síguenos en",
     "Contact_Us": "Contacte con nosotros",
@@ -37,7 +37,7 @@
         "Deliver_Anywhere": "Entregamos en cualquier lugar de Marruecos a través de Aramex o Amana en un plazo de 24 a 72 horas."
     },
     "About": {
-        "AboutTitle": "About",
+        "AboutTitle": "Acerca de",
         "Title": "las puras mieles"
     },
     "Benifices": {
