--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -8,17 +8,17 @@
     "Name": "Name",
     "NameError": "I am sure you must have a name!",
     "Email": "Email address",
-    "PhoneNo": "Phone No",
-    "Password": "Password",
+    "PhoneNo": "Téléphone",
+    "Password": "Mot de passe",
     "Bio": "Enter bio",
     "TermsConditions": "I agree to terms and conditions.",
-    "Submit": "Submit",
+    "Submit": "Envoyer",
     "LigneTxt": "Commander en ligne ou par téléphone",
     "Follow_Us": "Suivez-nous",
     "Contact_Us": "Contactez-nous",
-    "About_Us": "About Us",
-    "Country": "Morrocco",
-    "where_we_are": "Dónde estamos",
+    "About_Us": "À propos de nous",
+    "Country": "Maroc",
+    "where_we_are": "Où nous sommes",
     "Collection_Procedure": "Collecte Procédure",
     "Adress": "Av Mohamed 5 N65 Bl5 Porte4",
     "Help": "Support",
@@ -37,7 +37,7 @@
         "Deliver_Anywhere": "Partout au Maroc, On vous livre via Aramex ou Amana dans 24 - 72 Heures."
     },
     "About": {
-        "AboutTitle": "About",
+        "AboutTitle": "A propos de",
         "Title": "les miels purs du"
     },
     "Benifices": {
