traducciones del la APP

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -37,8 +37,8 @@
         "Deliver_Anywhere": "نقوم بالتوصيل إلى أي مكان في المغرب عبر أرامكس أو أمانة في غضون 24 - 72 ساعة."
     },
     "About": {
-        "AboutTitle": "نبذة عن",
-        "Title": "العسل الصافي"
+        "Title": "نبذة عن",
+        "AboutTitle": "العسل الصافي"
     },
     "Benifices": {
         "BenificesTitle": "فوائد العسل",
