--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,8 +37,8 @@
         "Deliver_Anywhere": "We deliver anywhere in Morocco via Aramex or Amana within 24 - 72 hours."
     },
     "About": {
-        "AboutTitle": "About",
-        "Title": "the pure honeys of"
+        "Title": "About",
+        "AboutTitle": "the pure honeys of"
     },
     "Benifices": {
         "BenificesTitle": "Honey Benifices",
