--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -37,8 +37,8 @@
         "Deliver_Anywhere": "Entregamos en cualquier lugar de Marruecos a través de Aramex o Amana en un plazo de 24 a 72 horas."
     },
     "About": {
-        "AboutTitle": "Acerca de",
-        "Title": "las puras mieles"
+        "Title": "Acerca de",
+        "AboutTitle": "las puras mieles"
     },
     "Benifices": {
         "BenificesTitle": "Beneficios de la miel",
