--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -37,8 +37,8 @@
         "Deliver_Anywhere": "Partout au Maroc, On vous livre via Aramex ou Amana dans 24 - 72 Heures."
     },
     "About": {
-        "AboutTitle": "A propos de",
-        "Title": "les miels purs du"
+        "Title": "A propos de",
+        "AboutTitle": "les miels purs du"
     },
     "Benifices": {
         "BenificesTitle": "Benifices",
