Nuevo componente WhereAre

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -78,5 +78,9 @@
     },
     "Blog": {
         "Title": "مدونة"
+    },
+    "staff":{
+        "role":"TestAPICULTOR profesional",
+        "description":"TestCriador de reinas profesional dedicado a la producción de material vivo. Trabaja con diferentes razas. Especialista en Buckfast."
     }
 }
