--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -43,6 +43,9 @@
             "Title": "مكان تواجدنا",
             "Region": "جهة الرباط - سلا - زمور- زعير ",
             "Located": " هي إحدى الجهات الستة عشرة التي تؤلف المغرب. تقع جهة الرباط - سلا - زمور- زعير في الشمال الغربي للمملكة، على الهضبة الوسطى.التي يغطي جزءا كبيرا منها إقليم الخميسات، وكذا الهضبة الساحلية التي تمتد على ولاية الرباط - سلا. تحد من الشمالوالشمال الشرقي بجهة الغرب - الشراردة - بني حسن، ومن الغرب بالمحيط الأطلسي، ومن الشرق والجنوب الشرقي بجهة مكناس-تافيلالت، ومن الجنوب والجنوب الغربي بجهة الشاوية - ورديغة تمتد الجهة على مساحة تقدر ب 9580كلم²، أي بنسبة 1,3% من المساحةالإجمالية للبلاد، وتضم 3 عمالات وإقليم واحد. "
+        },
+        "Contact_Us":{
+            "Title": "اتصل بنا"
         }
     },
     "Benifices": {
