--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -43,6 +43,9 @@
             "Title": "Donde estamos",
             "Region": "La región de Rabat-Salé-Zemmour-Zaïr",
             "Located": " es una de las dieciséis regiones que componen Marruecos. La región de Rabat-Salé-Zemmour-Za'ir se encuentra en el noroeste del Reino, en la meseta central. Gran parte de ella cubre la provincia de Khemisset, así como la meseta costera que se extiende sobre la wilaya de Rabat-Salé. Limita al norte y noreste con el oeste - Chararda - Beni Hassan, al oeste con el Océano Atlántico, al este y sureste con la región de Meknes-Tafilalet, y al sur y suroeste con la región de Chaouia - Ouardigha se extiende sobre un área de 9580 km², es decir, el 1,3% de la superficie total del país, e incluye 3 prefecturas y una región."
+        },
+        "Contact_Us":{
+            "Title": "Contacte con nosotros"
         }
     },
     "Benifices": {
