--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -43,6 +43,9 @@
             "Title": "Où nous sommes",
             "Region": "La région de Rabat-Salé-Zemmour-Zaïr",
             "located": " est l'une des seize régions qui composent le Maroc. La région de Rabat-Salé-Zemmour-Zaïr est située au nord-ouest du Royaume, sur le plateau central. Elle couvre en grande partie la province de Khemisset, ainsi que le plateau côtier qui s'étend sur la wilaya de Rabat-Salé. Elle est limitée au nord et au nord-est par l'ouest - Chararda - Beni Hassan, à l'ouest par l'océan Atlantique, à l'est et au sud-est par la région de Meknès-Tafilalet, et au sud et au sud-ouest par la région de Chaouia - Ouardigha s'étend sur une superficie de 9580 km², soit 1,3 % de la superficie totale du pays, et comprend 3 préfectures et une région."
+        },
+        "Contact_Us":{
+            "Title": "Contactez-nous"
         }
     },
     "Benifices": {
