--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -43,6 +43,9 @@
             "Title": "Where we are",
             "Region": "The Rabat-Salé-Zemmour-Zaïr region",
             "Located": "  is one of the sixteen regions that make up Morocco. The Rabat-Salé-Zemmour-Za'ir region is located in the northwest of the Kingdom, on the central plateau. Much of it covers the province of Khemisset, as well as the coastal plateau that extends over the wilaya of Rabat-Salé. It is bordered to the north and northeast by the west - Chararda - Beni Hassan, to the west by the Atlantic Ocean, to the east and southeast by the region of Meknes-Tafilalet, and to the south and southwest by the region of Chaouia - Ouardigha extends over an area of 9580 km², i.e. 1.3% of the total area of the country, and includes 3 prefectures and a region."
+        },
+        "Contact_Us":{
+            "Title": "Contact us"
         }
     },
     "Benifices": {
