--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -30,12 +30,6 @@
         "HomeTitle": "الصفحة الرئيسية",
         "Parraph": " العسل الجبلي من خلايا النحل XXXX في الحديقة، وهو عسل مصنوع من مجموعة متنوعة من الزهور الموجودة في الطبيعة. يتم حصاده على ارتفاع يتراوح بين 1200 متر و2600 متر، من الغابات المهيبة أو الجبال أو المروج حيث الطبيعة النقية قدر الإمكان."
     },
-    "Delivery": {
-        "DeliveryTitle": "الشحن والتوصيل",
-        "Payment_Method": "طريقة الدفع (الدفع نقداً عند الاستلام)",
-        "Cash_Delivery": "الدفع عند الاستلام يعني أن المتسوق يمكنه التسوق عبر متجرنا إلكتروني واختيار المنتج الذي يرغب في شرائه ومن ثم يقوم بإجراء الطلب واختيار طريقة الدفع عند الاستلام وهو ما يعني أن عملية الدفع تؤجل حتى استلام العميل للمنتج الذي قام بطلبه إلكترونيًا. وسنقوم بإرسال المنتج إلى المكان المتفق عليه (المدينة أو الحي أو المنزل أو مكان اخر)، وبعدها يتم الدفع",
-        "Deliver_Anywhere": "نقوم بالتوصيل إلى أي مكان في المغرب عبر أرامكس أو أمانة في غضون 24 - 72 ساعة."
-    },
     "About": {
         "Title": "نبذة عن",
         "AboutTitle": "العسل الصافي",
@@ -44,12 +38,18 @@
             "Region": "جهة الرباط - سلا - زمور- زعير ",
             "Located": " هي إحدى الجهات الستة عشرة التي تؤلف المغرب. تقع جهة الرباط - سلا - زمور- زعير في الشمال الغربي للمملكة، على الهضبة الوسطى.التي يغطي جزءا كبيرا منها إقليم الخميسات، وكذا الهضبة الساحلية التي تمتد على ولاية الرباط - سلا. تحد من الشمالوالشمال الشرقي بجهة الغرب - الشراردة - بني حسن، ومن الغرب بالمحيط الأطلسي، ومن الشرق والجنوب الشرقي بجهة مكناس-تافيلالت، ومن الجنوب والجنوب الغربي بجهة الشاوية - ورديغة تمتد الجهة على مساحة تقدر ب 9580كلم²، أي بنسبة 1,3% من المساحةالإجمالية للبلاد، وتضم 3 عمالات وإقليم واحد. "
         },
-        "Contact_Us":{
+        "Contact_Us": {
             "Title": "اتصل بنا"
+        },
+        "Delivery": {
+            "Title": "الشحن والتوصيل",
+            "Payment_Method": "طريقة الدفع (الدفع نقداً عند الاستلام)",
+            "Cash_Delivery": "الدفع عند الاستلام يعني أن المتسوق يمكنه التسوق عبر متجرنا إلكتروني واختيار المنتج الذي يرغب في شرائه ومن ثم يقوم بإجراء الطلب واختيار طريقة الدفع عند الاستلام وهو ما يعني أن عملية الدفع تؤجل حتى استلام العميل للمنتج الذي قام بطلبه إلكترونيًا. وسنقوم بإرسال المنتج إلى المكان المتفق عليه (المدينة أو الحي أو المنزل أو مكان اخر)، وبعدها يتم الدفع",
+            "Deliver_Anywhere": "نقوم بالتوصيل إلى أي مكان في المغرب عبر أرامكس أو أمانة في غضون 24 - 72 ساعة."
         }
     },
     "Benifices": {
-        "BenificesTitle": "فوائد العسل",
+        "Title": "فوائد العسل",
         "Title1": "تعرف على أبرز أنواع العسل وفوائده",
         "DescriptionHoney": "العسل هو طعام طبيعي حلو ولزج يُنتجه النحل. ينتج النحل العسل من إفرازات النباتات السكرية (رحيق الزهور) من خلال العمليات المنظمة والنشاط الأنزيمي الخاص، وبعد تبخر الماء يأخذ شكله النهائي. يتم تخزين العسل في هياكل شمعية تسمى أقراص العسل. ينتج النحل مجموعة متنوعة من العسل تختلف في اللون والذوق والانتفاخ (اعتمادًا على مصدر الغذاء للنحل).",
         "TitleType": "أشهر وأفضل 7 أنواع العسل في المغرب",
