--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -30,12 +30,6 @@
         "HomeTitle": "Home",
         "Parraph": " Miel de montaña procedente de las XXXX colmenas del parque, una miel elaborada a partir de una variedad de flores que se encuentran en la naturaleza.Recolectada a altitudes de entre 1200 m y 2600 m, en majestuosos bosques, montañas y prados donde la naturaleza es lo más pura posible."
     },
-    "Delivery": {
-        "DeliveryTitle": "Envíos",
-        "Payment_Method": "Mode de paiement (contre remboursement)Forma de pago (contra reembolso)",
-        "Cash_Delivery": "Contrareembolso significa que el comprador puede comprar a través de nuestra tienda en línea y elegir el producto que desea comprar, luego realizar el pedido y elegir el método Contrareembolso, lo que significa que el proceso de pago se pospone hasta que el cliente reciba el producto que pidió en línea. Enviaremos el producto al lugar acordado (ciudad, barrio, domicilio u otro lugar), tras lo cual se efectuará el pago",
-        "Deliver_Anywhere": "Entregamos en cualquier lugar de Marruecos a través de Aramex o Amana en un plazo de 24 a 72 horas."
-    },
     "About": {
         "Title": "Acerca de",
         "AboutTitle": "las puras mieles",
@@ -44,12 +38,18 @@
             "Region": "La región de Rabat-Salé-Zemmour-Zaïr",
             "Located": " es una de las dieciséis regiones que componen Marruecos. La región de Rabat-Salé-Zemmour-Za'ir se encuentra en el noroeste del Reino, en la meseta central. Gran parte de ella cubre la provincia de Khemisset, así como la meseta costera que se extiende sobre la wilaya de Rabat-Salé. Limita al norte y noreste con el oeste - Chararda - Beni Hassan, al oeste con el Océano Atlántico, al este y sureste con la región de Meknes-Tafilalet, y al sur y suroeste con la región de Chaouia - Ouardigha se extiende sobre un área de 9580 km², es decir, el 1,3% de la superficie total del país, e incluye 3 prefecturas y una región."
         },
-        "Contact_Us":{
+        "Contact_Us": {
             "Title": "Contacte con nosotros"
+        },
+        "Delivery": {
+            "Title": "Envíos",
+            "Payment_Method": "Mode de paiement (contre remboursement)Forma de pago (contra reembolso)",
+            "Cash_Delivery": "Contrareembolso significa que el comprador puede comprar a través de nuestra tienda en línea y elegir el producto que desea comprar, luego realizar el pedido y elegir el método Contrareembolso, lo que significa que el proceso de pago se pospone hasta que el cliente reciba el producto que pidió en línea. Enviaremos el producto al lugar acordado (ciudad, barrio, domicilio u otro lugar), tras lo cual se efectuará el pago",
+            "Deliver_Anywhere": "Entregamos en cualquier lugar de Marruecos a través de Aramex o Amana en un plazo de 24 a 72 horas."
         }
     },
     "Benifices": {
-        "BenificesTitle": "Beneficios de la miel",
+        "Title": "Beneficios de la miel",
         "Title1": "Conoce los principales tipos de miel y sus beneficios",
         "DescriptionHoney": "La miel es un alimento natural dulce y pegajoso producido por las abejas. Las abejas producen miel a partir de las secreciones azucaradas de las plantas (néctar de las flores) mediante procesos regulados y una actividad enzimática especial, y tras la evaporación del agua adquiere su forma final. La miel se almacena en estructuras cerosas llamadas panales. Las abejas producen una variedad de miel que varía en color, sabor y bulto (dependiendo de la fuente de alimento de la abeja)",
         "TitleType": "Las 7 mieles más famosas y mejores de Marruecos",
