--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -27,7 +27,7 @@
         "Heart_Of_Nature": "من قلب الطبيعة"
     },
     "Home": {
-        "HomeTitle": "الصفحة الرئيسية",
+        "Title": "الصفحة الرئيسية",
         "Parraph": " العسل الجبلي من خلايا النحل XXXX في الحديقة، وهو عسل مصنوع من مجموعة متنوعة من الزهور الموجودة في الطبيعة. يتم حصاده على ارتفاع يتراوح بين 1200 متر و2600 متر، من الغابات المهيبة أو الجبال أو المروج حيث الطبيعة النقية قدر الإمكان."
     },
     "About": {
