--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,7 +27,7 @@
         "Heart_Of_Nature": "In the heart of nature"
     },
     "Home": {
-        "HomeTitle": "Home",
+        "Title": "Home",
         "Parraph": "Le miel de Montagne des ruches Atlassia installées au parc nationale de ifrane, un miel de fleurs variées dumoyen atlas.Récolté entre 1200m et 2600 m d'altitude, sur des forêts majestueuses, des montagnes ou encore des prairies là oùla nature est la plus pure possible."
     },
 
