--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -27,7 +27,7 @@
         "Heart_Of_Nature": "En pleno corazón de la naturaleza"
     },
     "Home": {
-        "HomeTitle": "Home",
+        "Title": "Home",
         "Parraph": " Miel de montaña procedente de las XXXX colmenas del parque, una miel elaborada a partir de una variedad de flores que se encuentran en la naturaleza.Recolectada a altitudes de entre 1200 m y 2600 m, en majestuosos bosques, montañas y prados donde la naturaleza es lo más pura posible."
     },
     "About": {
